# swc-whitelabel

./: CONTRIBUTION.md  Cargo.toml  README.md  package-lock.json
.github/workflows/: rust.yml
lalrpop/: directive.lalrpop
src/: codemod.rs  collector.rs  config.rs  lib.rs  main.rs  run.rs  util.rs
src/ast/: codemod.rs  collector.rs  errorable.rs  locator.rs  mod.rs  rename.rs  rewriter.rs  scanner.rs  whitelabel.rs
src/ast/directive/: directive.rs
src/ast/parser/: ast.rs  directive.rs  mod.rs
src/common/: errorable.rs  mod.rs  registry.rs  registry_serialize.rs
src/config/: config.rs  env.rs  mod.rs  tsconfig.rs
src/generator/: determines_whitelabel.rs  index.rs  mod.rs  whitelabel.rs  wl.rs
src/module/: codemod.rs  existings_whitelabel.rs  mod.rs  registry.rs  rename.rs  rename_whitelabel.rs
src/util/: mod.rs  resolver.rs  transactional.rs
tests/: collector_test.rs  integration_test.rs
tests/fixtures/collector/: whitelabel.config.json
tests/fixtures/collector/accept_src/: functions.tsx  variables.tsx
tests/fixtures/collector/reject_src/: classes.tsx
tests/fixtures/collector/reject_types/: enums.tsx  interfaces.tsx  modules.tsx  types.tsx
tests/snapshots/: collector_test__class.tsx_collector_entries.snap  collector_test__class.tsx_collector_errors.snap  collector_test__classes.tsx_collector_errors.snap  collector_test__enum.tsx_collector_errors.snap  collector_test__enums.tsx_collector_errors.snap  collector_test__functions.tsx_collector_entries.snap  collector_test__functions.tsx_collector_errors.snap  collector_test__interfaces.tsx_collector_errors.snap  collector_test__modules.tsx_collector_errors.snap  collector_test__types.tsx_collector_errors.snap  collector_test__variables.tsx_collector_entries.snap  collector_test__variables.tsx_collector_errors.snap  integration_test__tests__asymmetric-keys-error.snap  integration_test__tests__bad-import-detections-error.snap  integration_test__tests__basic-usages-manifest.snap  integration_test__tests__basic-usages.snap  integration_test__tests__circular-imports-manifest.snap  integration_test__tests__circular-imports.snap  integration_test__tests__closing-jsx-manifest.snap  integration_test__tests__closing-jsx.snap  integration_test__tests__duplicate-keys-error.snap  integration_test__tests__foo_repo.snap  integration_test__tests__import-detections-manifest.snap  integration_test__tests__import-detections.snap  integration_test__tests__invalid-directives-error.snap  integration_test__tests__missing-configs-manifest.snap  integration_test__tests__missing-configs.snap  integration_test__tests__optionality-and-wildcard-manifest.snap  integration_test__tests__optionality-and-wildcard.snap  integration_test__tests__svelte-example-manifest.snap  integration_test__tests__svelte-example.snap
(+38 files in other folders)
