[package]
name = "wl-extractor"
version = "0.1.0"
edition = "2024"

[dependencies]
swc_core = { version = "58.0.*", features = ["common", "ecma_ast", "ecma_parser", "ecma_visit", "common_tty", "ecma_codegen", "__ecma", "swc_ecma_ast", "ecma_plugin_transform"] }
glob = "0.3.1"
anyhow = "1.0"
serde = "1.0.220" # Pin strictly to the last working version
serde_json = "1.0.149"

[profile.release]
opt-level = 3        # (Default) All out speed optimization
lto = true           # Link Time Optimization. Massive speed boost, but slower to compile.
codegen-units = 1    # Forces Rust to optimize the entire crate as one unit. 
panic = "abort"      # Strips out stack-unwinding code. Makes the binary smaller and slightly faster.
strip = true         # Automatically strips symbols from the binary, massively reducing file size!